--- a/media.css
+++ b/media.css
@@ -1,101 +1,65 @@
 /* set Media quary */
-@media only screen and (max-width: 1024px) {
+@media (min-width: 560px) and (max-width: 1024px) {
 
     .wrapper {
-        width: 100%
-    }
-
-    .Errer-image {
-        position: absolute;
-        left: 28%;
-    }
-
-   .city-not-found {
-     position: absolute;
-     top: 95%;
-     left: 40%;
-   } 
-}
-
-/* 768px */
-@media only screen and (max-width: 768px) {
-
-     .wrapper {
-          width: 100%
-     }
-
-     .Errer-image {
-          width: 250px;
-          position: absolute;
-          left: 22%;
-     }   
-}
-
-/* 600px */
-@media only screen and (max-width: 600px) {
-
-     .wrapper {
-          width: 100%
-     }
-
-     .Errer-image {
-          position: absolute;
-          left: 13%;
-     }  
-}
-
-/* 570px */
-@media only screen and (max-width: 570px) {
-
-     .wrapper {
-          width: 100%;
-     }
-
-     .tab-container {
-         width: 90%;
-     }
-
-     .tab {
-          padding: 3.5px 4px;
-     }
-
-     .Errer-image {
-          width: 250px;
-          position: absolute;
-          left: 28%;
-     }
-
-     .city-not-found {
-          font-size: 1em;
-     }
-
-     .form-container {
         width: 100%;
-     }
+        overflow-y: scroll;
+    }
 
-     .form-container input {
-          width: 70%;
-          height: 33px;
-     }
-
-     .form-container .btn {
-          width: 35px;
-          height: 35px;
-          border-bottom: 0.9px;
-     }
+    .ErrerImage.active{
+        width: 180px;
+        position: relative;
+        left: 38%;
+    } 
 }
 
 
-/* 425px */
-@media only screen and (max-width: 425px) {
+@media (min-width: 180px) and (max-width: 560px) {
 
      .wrapper {
           width: 100%;
-          height: 100%;
+          overflow-x: auto;
+          overflow-y: scroll;
      }
 
      .parameter-container {
           display: flex;
           flex-direction: column;
+          align-items: center;
+     }
+
+     .parameter {
+          width: 100%;
+          max-width: 20rem;
+     }
+
+     .tab {
+          font-size: 0.8rem;
+          letter-spacing: 1.75px;
+          padding: 5px 8px;
+     }
+
+     .tab-container {
+          width: 100%;
+          margin-left: 8px;
+          margin-right: 8px;
+     }
+
+     .ErrerImage.active {
+          width: 180px;
+          position: relative;
+          left: 20%; 
+     }
+
+     h1 {
+          color: orange;
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     }
+}
+
+@media (max-width: 1440px) {
+     .form-container {
+          width: 80%;
+          margin-bottom: 20px;
      }
 }
