--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
 .wrapper{
     width:100vw;
     height: 100vh;
-    max-height: screen;
+    overflow-y: scroll;
     color: var(--colorLight2);
     background-image: linear-gradient(160deg, #112d4e 0%, #3f72af 100%);;
 }
@@ -44,11 +44,19 @@ h1 {
     font-size: 0.875rem;
     letter-spacing: 1.75px;
     padding: 5px 8px;
+    transition: all 0.2s ease-in-out;
 }
 
 .tab.current-tab{
     background-color: rgba(219, 226, 239, 0.5);
     border-radius: 4px;
+}
+
+.tab:active {
+    border-radius: 8px;
+    scale: 1.1;
+    color: #333;
+    background-color: pink;
 }
 
 .weather-container{
@@ -114,7 +122,7 @@ h1 {
 }
 
 .user-info-container{
-    display:none;
+    display: none;
 }
 
 .user-info-container.active{
@@ -122,10 +130,16 @@ h1 {
 }
 
 /* Errer image show */
-#Errer-image{
-    display: none;
-    width: 200px;
-    height: 200px;
+.ErrerImage{
+    display: none;  
+}
+
+.ErrerImage.active {
+    width: 30%;
+    display: flex;
+    position: relative;
+    left: 35%;
+
 }
 
 .name{
@@ -202,7 +216,7 @@ h1 {
 /*************form container*************/
 .form-container{
     display: none;
-    width:550px;
+    width: 40%;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
@@ -241,6 +255,12 @@ h1 {
     justify-content: center;
     border-radius: 50%;
     margin-bottom: 1px;
+    transition: 0.2s ease-in-out;
+}
+
+.btn:active {
+    scale: 1.2;
+    background-color: pink;
 }
 
 
@@ -317,5 +337,74 @@ h1 {
     to {
         bottom: 0;
         opacity: 0;
+    }
+}
+
+
+
+
+/* set Media quary */
+@media (min-width: 560px) and (max-width: 1024px) {
+
+    .wrapper {
+        width: 100%;
+        overflow-y: scroll;
+    }
+
+    .ErrerImage.active {
+        width: 180px;
+        position: relative;
+        left: 38%;
+    }
+}
+
+
+@media (min-width: 180px) and (max-width: 560px) {
+
+    .wrapper {
+        width: 100%;
+        overflow-x: auto;
+        overflow-y: scroll;
+    }
+
+    .parameter-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .parameter {
+        width: 100%;
+        max-width: 20rem;
+    }
+
+    .tab {
+        font-size: 0.8rem;
+        letter-spacing: 1.75px;
+        padding: 5px 8px;
+    }
+
+    .tab-container {
+        width: 100%;
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+
+    .ErrerImage.active {
+        width: 180px;
+        position: relative;
+        left: 20%;
+    }
+
+    h1 {
+        color: orange;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+}
+
+@media (max-width: 1440px) {
+    .form-container {
+        width: 80%;
+        margin-bottom: 20px;
     }
 }
